<resources>
    <string name="app_name">WorldAdventure</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="EmptyUsername">Username field is empty</string>
    <string name="EmptyPassword">Password field is empty</string>
    <string name="title_activity_hero_selection">HeroSelection</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="BCreateAccount">Create Account</string>
    <string name="WrongUsername">Wrong username, pls insert again</string>
    <string name="WrongPassword">Wrong password, pls insert again</string>
    <string name="InvalidNewUsername">That username already exist</string>
    <string name="Selection_Hero1">Hero 1</string>
    <string name="Selection_Hero2">Hero 2</string>
    <string name="Selection_Hero3">Hero 3</string>
    <string name="Selection_Delete">Delete</string>
    <string name="Selection_Level">Level:</string>
    <string name="Selection_Class">Class:</string>
    <string name="Selection_HP">HP:</string>
    <string name="Selection_Weapon">Weapon:</string>
    <string name="Selection_ATK">ATK:</string>
    <string name="Selection_Luck">Luck:</string>
    <string name="Selection_Defence">Defence:</string>
    <string name="Selection_Armor">Armor:</string>
    <string name="Selection_Inventory">Inventory</string>
    <string name="title_activity_in_game">InGame</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_create_hero">CreateHero</string>
    <string name="tab_text_1">Warrior</string>
    <string name="tab_text_2">Mage</string>
    <string name="tab_text_3">Paladin</string>
    <string name="tab_text_4">Priest</string>
    <string name="tab_text_5">Archer</string>
    <string name="CreateHeroTitle_Warrior">Warrior</string>
    <string name="CreateHeroTitle_Mage">Mage</string>
    <string name="CreateHeroTitle_Paladin">Paladin</string>
    <string name="CreateHeroTitle_Priest">Priest</string>
    <string name="CreateHeroTitle_Archer">Archer</string>
    <string name="CreateHeroButton_SelectHero">Select Hero</string>
    <string name="TravelButton">Take a Step</string>
    <string name="Battlefight">FIGHT</string>
    <string name="BattleEndButton">End</string>
    <string name="BattleGameOverButton">GameOver</string>
    <string name="title_activity_teste">Teste</string>
    <string name="StepText1">You found a old house, seems like no one is there</string>
    <string name="StepText4">You reach a town, good place to gather information and maybe rest a bit</string>
    <string name="StepText2">You run into a cavern, you decide to enter looking for a treasure and hopefully no bear, it happers you had luck</string>
    <string name="StepText3">You keep walking around, thinking about life</string>
    <string name="StepText5">You walk into a ancient ruin,you decide to explore it</string>
    <string name="StepText6">You go play cards with your friends</string>
    <string name="StepText7">Thank you for playing this game, send a email with tips to improve the game</string>
    <string name="StepText8">You try to exercise more at morning, exercise is good to keep focus and health and maybe help you survive</string>
    <string name="StepText9">You found a monster lair, hopefully no monster is there</string>
    <string name="StepText10">You found some mercheants and decide to help them until the next city</string>
</resources>
