<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context=".Class_Interface.CreateHero">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateHeroTitle_Paladin"
            android:textAlignment="center"
            android:textSize="@dimen/Selection_HerotitleSize" />

    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:padding="16dp"
        android:rowCount="1">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_rowWeight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/ImageView_Hero1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/selection_paladin_smaller" />
        </android.support.v7.widget.CardView>
    </GridLayout>

    <LinearLayout
        android:id="@+id/RelativeLayout_HeroName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewHeroName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/ImageViewHeroIcon"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:src="@drawable/paladin" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/GridLayoutHeroStats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:alignmentMode="alignMargins"
        android:columnCount="4"
        android:columnOrderPreserved="false"
        android:padding="16dp"
        android:rowCount="4"
        >

        <!--Row 1 /////////////////////////////////////////////////////////////////////////////////////////////// -->

        <!--Column 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Selection_Level" />
        </LinearLayout>

        <!--Column 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity=""
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewLevelValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20" />

        </LinearLayout>

        <!--Column 3 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity=""
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/Selection_Class" />
        </LinearLayout>

        <!--Column 4 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity=""
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewClassValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Warrior" />
        </LinearLayout>

        <!--Row 2 /////////////////////////////////////////////////////////////////////////////////////////////// -->

        <!--Column 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewHP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Selection_HP" />
        </LinearLayout>

        <!--Column 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity=""
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewHPValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1500" />

        </LinearLayout>

        <!--Column 3 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity=""
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewLuck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/Selection_Luck" />

        </LinearLayout>

        <!--Column 4 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity=""
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewLuckValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="8" />
        </LinearLayout>

        <!--Row 3 /////////////////////////////////////////////////////////////////////////////////////////////// -->

        <!--Column 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewATK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Selection_ATK" />
        </LinearLayout>

        <!--Column 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity=""
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewATKValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="87" />

        </LinearLayout>

        <!--Column 3 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity=""
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewEquipWeapon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/Selection_Weapon" />

        </LinearLayout>

        <!--Column 4 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity=""
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewEquipSwordValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="GodKiller" />
        </LinearLayout>

        <!--Row 4 /////////////////////////////////////////////////////////////////////////////////////////////// -->

        <!--Column 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewDefence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Selection_Defence" />
        </LinearLayout>

        <!--Column 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity=""
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewDefenceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="46" />

        </LinearLayout>

        <!--Column 3 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity=""
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewEquipArmor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/Selection_Armor" />
        </LinearLayout>

        <!--Column 4 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:gravity=""
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/Selection_StatsSize"
                android:id="@+id/TextViewEquipArmorValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Dragon Slayer" />
        </LinearLayout>

    </GridLayout>
    <RelativeLayout
        android:id="@+id/RelativeLayoutButoes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/buttonInventario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/CreateHeroButton_SelectHero"
            android:onClick="CreateHero3"/>

    </RelativeLayout>

</LinearLayout>